Fix nav bar spacing

--- a/client/src/components/App/app.css
+++ b/client/src/components/App/app.css
@@ -1,8 +1,3 @@
-.layout {
-  height: 100%;
-  width: 100%;
-}
-
 .modal {
   position: absolute;
   top: 15rem;
