--- a/client/src/components/Nav/nav.css
+++ b/client/src/components/Nav/nav.css
@@ -1,18 +1,9 @@
-.navContainer {
+.nav {
+  display: flex;
   min-height: 4rem;
   min-width: 100%;
   background: #6eeb83;
-}
-
-.nav {
-  display: flex;
-  min-height: 100%;
-  justify-content: space-between;
   align-items: center;
-}
-
-.authButtons {
-  display: flex;
 }
 
 .navItem {
